<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.batest39.myfirstapplication.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="371dp"
        android:layout_height="98dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/visibleCard2"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516"
        tools:layout_editor_absoluteY="211dp"
        tools:layout_editor_absoluteX="44dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="115dp"
            android:layout_height="85dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/warCard2"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout3"
            app:layout_constraintVertical_bias="0.333"
            app:layout_constraintLeft_toRightOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="115dp"
            android:layout_height="85dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/warCard1"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
            app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout3"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout3" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/warButton"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
            app:layout_constraintLeft_toRightOf="@+id/textView11"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout3" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="172dp"
        android:layout_height="82dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019">

        <TextView
            android:id="@+id/player2CardsLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/player2CardsLeft"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.795"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/player2Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/player2Label"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/player1CardsLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/player1CardsLeft"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.791"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="0.538" />

        <TextView
            android:id="@+id/player1Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/player1Label"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="0.538" />

        <TextView
            android:id="@+id/playersCardsRemaining"
            android:layout_width="70dp"
            android:layout_height="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/playersCardsRemaining"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/playersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/playersLabel"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/display2"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:text="@string/display2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <TextView
        android:id="@+id/display1"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:text="@string/display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <TextView
        android:id="@+id/card3"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:text="@string/card3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969" />

    <TextView
        android:id="@+id/visibleCard2"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:text="@string/card2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969" />

    <TextView
        android:id="@+id/visibleCard1"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:text="@string/card1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.968" />

</android.support.constraint.ConstraintLayout>
