<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.batest39.myfirstapplication.MainActivity">

    <TextView
        android:id="@+id/display2"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:text="@string/display2"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/card3" />

    <TextView
        android:id="@+id/display1"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:text="@string/display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/card3"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:text="@string/card3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/display1"
        app:layout_constraintVertical_bias="0.971" />

    <TextView
        android:id="@+id/visibleCard2"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:text="@string/card2"
        app:layout_constraintBaseline_toBaselineOf="@+id/card3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

    <TextView
        android:id="@+id/visibleCard1"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:text="@string/card1"
        app:layout_constraintBaseline_toBaselineOf="@+id/card3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="147dp"
        android:layout_height="299dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.constraint.ConstraintLayout>

    <EditText
        android:id="@+id/inputText"
        android:layout_width="67dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/emptyString"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.991"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:text="@string/sendMessage"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.991"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toRightOf="@+id/inputText" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="172dp"
        android:layout_height="82dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/player2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player2Label"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/player2CardsLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player2CardsLeft"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/player1CardsLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player1CardsLeft"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.538"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/player1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player1Label"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.538"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/playersCardsRemaining"
        android:layout_width="70dp"
        android:layout_height="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/playersCardsRemaining"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/playersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/playersLabel"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="408dp"
        android:layout_height="107dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/visibleCard2"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintVertical_bias="0.516"
        android:id="@+id/constraintLayout3">

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/warCard2"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/warCard2"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout3"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout3" />

    <TextView
        android:id="@+id/warCard1"
        android:layout_width="115dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/warCard1"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout3"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout3" />

    <Button
        android:id="@+id/warButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/warButton"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintLeft_toRightOf="@+id/warCard2"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout3" />

</android.support.constraint.ConstraintLayout>
